--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "PBSmapping_2.61.9.tar.gz:"	c2fd84d17e74b1f4e79ebd571df2f04e99e4155d
+  PBSmapping_2.65.40.tar.gz: 7518899dcefc55fd2d67d96ce9b23b2ee5b1b044
